cmake_minimum_required(VERSION 3.16)
project(bt)
set(CMAKE_CXX_STANDARD 20)

include_directories(.)
enable_testing()
add_executable(test-insert test_insert.cpp)
add_executable(test-pop test_pop.cpp)
add_executable(perf-over-rbtree perf_rbtree.cpp)
add_executable(test-construction test_construction.cpp)
add_test(insert test-insert)
add_test(pop test-insert)
add_test(construction test-construction)